--- a/nbb.html
+++ b/nbb.html
@@ -223,60 +223,14 @@ INFO: Registered to: OTHINK Technology Co.,Ltd.</pre>
         'playerVersion': 't501.xml?' + timestamp ,
         'templateId': 1,
         'xml': '<?xml version="1.0"?><krpano version="1.19"><include url="%$PLAYER_DOMAIN%/api/lensflare/lensflare.xml"/><include url="%$PLAYER_DOMAIN%/krp/player_%$TEMPLATE_ID%_%$PLAYER_VERSION%.xml"/><scene name="scene_3899907" pano_id="3899907"><preview url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/preview.jpg"/><image type="CUBE" multires="true" tilesize="512" if="!webvr.isenabled AND device.desktop"><level tiledimagewidth="3184" tiledimageheight="3184"><cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l3/%v/l3_%s_%v_%h.jpg"/></level><level tiledimagewidth="1536" tiledimageheight="1536"><cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l2/%v/l2_%s_%v_%h.jpg"/></level><level tiledimagewidth="768" tiledimageheight="768"><cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l1/%v/l1_%s_%v_%h.jpg"/></level></image><image if="webvr.isenabled OR !device.desktop"><cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/mobile_%s.jpg"/></image></scene><config><qr url="%$AVATAR_DOMAIN%/avatar/55223988u1soZVRduP_O8Pl29W6Y2aYbWmqSz6M.jpeg"/><info pid="08fjkpkuOy0" id="2340150" title="杨开文-张家界天子山之四" desc="杨开文-张家界天子山之四"/><auth uid="55223988u1s" auth_name="杨天王" link="http://720yun.com/u/55223988u1s" status="1"/><feature enable_vr="1" enable_like="1" enable_littleplanet="1" show_comment="1" show_auth="1" enable_autorotate="1" show_pv="1" enable_selected="1" enable_share="1" enable_comment="1" enable_gyro="1" enable_password="0" enable_location="0"/><logo link="http://720yun.com" align="1" is_720="1" enabled="1"/><thumbs title="全景列表" show_thumb="0"><category name="category0" title="场景选择" thumb="%$SYSTEM_DOMAIN%/category/system/90/piclist.png"><pano name="pano_3899907" title="杨开文-张家界天子山之四" thumb="%$THUMB_DOMAIN%/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/thumb.jpg" pano_id="3899907"/></category></thumbs><panos><pano name="scene_3899907"><info pano_id="3899907" title="杨开文-张家界天子山之四"/><view autorotatekeepview="0" maxpixelzoom="2.0" vlookat="0" fovmin="70" loadscenekeepview="0" fovmax="120" vlookatmin="-90" hlookat="0" fov="95" fovtype="MFOV" vlookatmax="90"/><start_image_pc url=""/><start_image_mobile url=""/><sound url="%$SYSTEM_DOMAIN%/sound/3033lovedream.mp3"/><bottom_circle is_float="0" type="2" url="%$MEDIA_DOMAIN%/894952/2/14985763535102752.png"/></pano></panos></config></krpano>',
-      
-      '<?xml version="1.0" encoding="utf-8"?>
-
-<krpano version="1.19">
-  <include url="%$PLAYER_DOMAIN%/api/lensflare/lensflare.xml"/>
-  <include url="%$PLAYER_DOMAIN%/krp/player_%$TEMPLATE_ID%_%$PLAYER_VERSION%.xml"/>
-  <scene name="scene_3899907" pano_id="3899907">
-    <preview url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/preview.jpg"/>
-    <image type="CUBE" multires="true" tilesize="512" if="!webvr.isenabled AND device.desktop">
-      <level tiledimagewidth="3184" tiledimageheight="3184">
-        <cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l3/%v/l3_%s_%v_%h.jpg"/>
-      </level>
-      <level tiledimagewidth="1536" tiledimageheight="1536">
-        <cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l2/%v/l2_%s_%v_%h.jpg"/>
-      </level>
-      <level tiledimagewidth="768" tiledimageheight="768">
-        <cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/%s/l1/%v/l1_%s_%v_%h.jpg"/>
-      </level>
-    </image>
-    <image if="webvr.isenabled OR !device.desktop">
-      <cube url="http://pano23.qncdn.720static.com/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/mobile_%s.jpg"/>
-    </image>
-  </scene>
-  <config>
-    <qr url="%$AVATAR_DOMAIN%/avatar/55223988u1soZVRduP_O8Pl29W6Y2aYbWmqSz6M.jpeg"/>
-    <info pid="08fjkpkuOy0" id="2340150" title="杨开文-张家界天子山之四" desc="杨开文-张家界天子山之四"/>
-    <auth uid="55223988u1s" auth_name="杨天王" link="http://720yun.com/u/55223988u1s" status="1"/>
-    <feature enable_vr="1" enable_like="1" enable_littleplanet="1" show_comment="1" show_auth="1" enable_autorotate="1" show_pv="1" enable_selected="1" enable_share="1" enable_comment="1" enable_gyro="1" enable_password="0" enable_location="0"/>
-    <logo link="http://720yun.com" align="1" is_720="1" enabled="1"/>
-    <thumbs title="全景列表" show_thumb="0">
-      <category name="category0" title="场景选择" thumb="%$SYSTEM_DOMAIN%/category/system/90/piclist.png">
-        <pano name="pano_3899907" title="杨开文-张家界天子山之四" thumb="%$THUMB_DOMAIN%/resource/prod/39bi0d38200/55223988u1s/3899907/imgs/thumb.jpg" pano_id="3899907"/>
-      </category>
-    </thumbs>
-    <panos>
-      <pano name="scene_3899907">
-        <info pano_id="3899907" title="杨开文-张家界天子山之四"/>
-        <view autorotatekeepview="0" maxpixelzoom="2.0" vlookat="0" fovmin="70" loadscenekeepview="0" fovmax="120" vlookatmin="-90" hlookat="0" fov="95" fovtype="MFOV" vlookatmax="90"/>
-        <start_image_pc url=""/>
-        <start_image_mobile url=""/>
-        <sound url="%$SYSTEM_DOMAIN%/sound/3033lovedream.mp3"/>
-        <bottom_circle is_float="0" type="2" url="%$MEDIA_DOMAIN%/894952/2/14985763535102752.png"/>
-      </pano>
-    </panos>
-  </config>
-</krpano>'
       };
     </script> 
-   <script src="nb/other/maps"></script> 
+   <script src="nb/other/maps.js"></script> 
    <script src="nb/js/jweixin-1.2.0.js"></script> 
    <script type="text/javascript" src="nb/js/player_krp_v2.js"></script> 
    <script src="nb/js/common.d96015e16c1adeaa9340.js"></script> 
    <script src="nb/js/panoPage.696596f5cbb0dd4b3666.js"></script> 
   </div>
-  <script charset="utf-8" src="nb/other/main"></script> 
+  <script charset="utf-8" src="nb/other/main.js"></script> 
  </body>
 </html>
